--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="It’s (j)ust (e)leventy and (t)ailwind … OK, and a few other things; it’s still really small though."
+            content="A collection of programming protips"
         />
         <title>{{ title }}</title>
         <link rel="stylesheet" href="/css/styles.css" />
@@ -14,7 +14,7 @@
         <div class="">
             <header class="text-gray-600 body-font border-b-2">
                 <div
-                    class="container mx-auto flex justify-between p-5 flex-col md:flex-row items-center"
+                    class="container mx-auto flex justify-between p-6 flex-col md:flex-row"
                 >
                     <a
                         class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0"
@@ -39,16 +39,14 @@
                         </span>
                     </a>
 
-                    <div class="flex space-x-2">
+                    <div class="flex space-x-2 items-end">
                         <a
                             href="https://github.com/magicmark/composerize"
-                            class="sc-bxivhb iLpaO"
                             ><img
                                 src="https://img.shields.io/github/stars/magicmark/composerize.svg?style=social&amp;label=Star"
                                 alt="github" /></a
                         ><a
-                            href="https://twitter.com/intent/tweet?text=https%3A%2F%2Fcomposerize.com%2F+-+A+nifty+tool+for+converting+docker+run+commands+into+docker-compose+files%21"
-                            class="sc-bxivhb iLpaO"
+                            href="https://twitter.com/intent/tweet?text=https%3A%2F%2Fprogramming.protips.wiki+-+A+collection+of+programming+protips%21"
                             ><img
                                 src="https://img.shields.io/twitter/url/http/shields.io.svg?style=social"
                                 alt="twitter"
@@ -57,7 +55,7 @@
                 </div>
             </header>
         </div>
-        <div class="container mx-auto py-6">
+        <div class="container mx-auto p-6">
             <main>{{ content | safe }}</main>
         </div>
     </body>
