--- a/src/index.njk
+++ b/src/index.njk
@@ -2,24 +2,40 @@
 layout: base.html
 title: Programming Protips Wiki
 ---
+
 <div>
   <h1 class="font-semibold text-3xl">programming.protips.wiki</h1>
-  <p class="mt-1">A collection of programming protips</p>
+  <p class="mt-1 text-gray-800">A collection of programming protips</p>
 
-  <h2 class="font-semibold text-xl mt-6">How to use this website</h1>
-  <p class="mt-1">This website aims to save code reviewers from typing out the
-  same explanations for common issues/patterns.</p>
-  <p class="mt-1">Instead, you may provide a link to a protip, which contains a
-  <i>"bad"</i> example, a <i>"good"</i> example, and an explanation <i>why</i>
-  the pattern is encouraged/discouraged.
+  <h2 class="font-semibold text-xl mt-6">How to use this website</h2>
+  <p class="mt-1 text-gray-800">
+    This website aims to save code reviewers from typing out the same explanations for common issues/patterns.
+  </p>
+  <p class="mt-1 text-gray-800">
+    Instead, you may provide a link to a protip, which contains a <i>"bad"</i> example, a <i>"good"</i> example, and an
+    explanation <i>why</i> the pattern is encouraged/discouraged.
+  </p>
 
-  <h2 class="font-semibold text-xl mt-6 mb-1">Contributing</h1>
-  <p class="mt-1">If you'd like to add more protips, please visit the GitHub repo!</p>
+  <h2 class="font-semibold text-xl mt-6 mb-1">Contributing</h2>
+  <p class="mt-1 text-gray-800">
+    If you'd like to add more protips, please visit our GitHub repo:
+    <a
+      href="https://github.com/magicmark/programming-protips-wiki"
+      target="_blank"
+      class="text-indigo-500 hover:underline"
+      >magicmark/programming-protips-wiki</a
+    >
+  </p>
 
   <h1 class="font-semibold text-xl mt-6 mb-1">Protips</h1>
-  <ul>
-  {%- for protip in collections.all %}
-    <li>{{ protip.data.title }}</li>
-  {%- endfor %}
+  <ul class="list-inside list-disc	">
+    {%- for protip in collections.protips %}
+    <li class="text-lg">
+      <a href="{{ protip.data.page.url }}" class="text-indigo-500 hover:underline"
+        ><span class="mr-1 font-mono">/{{ protip.data.page.fileSlug }}/</span> — 
+        <span class="ml-1 font-bold">{{ protip.data.title }}</span></a
+      >
+    </li>
+    {%- endfor %}
   </ul>
 </div>
