--- a/src/index.njk
+++ b/src/index.njk
@@ -4,8 +4,8 @@ title: Programming Protips Wiki
 ---
 
 <div>
-  <h1 class="font-semibold text-3xl">programming.protips.wiki</h1>
-  <p class="mt-1 text-gray-800">A collection of programming protips</p>
+  <h1 class="font-bold text-3xl">programming.protips.wiki</h1>
+  <p class="mt-2 text-gray-800">A collection of programming protips</p>
 
   <h2 class="font-semibold text-xl mt-6">How to use this website</h2>
   <p class="mt-1 text-gray-800">
@@ -18,11 +18,11 @@ title: Programming Protips Wiki
 
   <h2 class="font-semibold text-xl mt-6 mb-1">Contributing</h2>
   <p class="mt-1 text-gray-800">
-    If you'd like to add more protips, please visit our GitHub repo:
+    If you'd like to add or edit protips, please visit our GitHub repo:
     <a
       href="https://github.com/magicmark/programming-protips-wiki"
       target="_blank"
-      class="text-indigo-500 hover:underline"
+      class="text-indigo-500 hover:underline font-mono"
       >magicmark/programming-protips-wiki</a
     >
   </p>
