--- a/src/_includes/post.html
+++ b/src/_includes/post.html
@@ -17,7 +17,11 @@ layout: base.html
   </div>
 
   <div class="flex flex-col">
-    <button id="copy-link" class="text-sm text-left text-gray-600 mb-2 text-indigo-400">Copy link to this page</button>
+    <div class="flex">
+      <button id="copy-link" class="text-sm text-left text-gray-600 mb-2 text-indigo-400">
+        Copy link to this page
+      </button>
+    </div>
     <div class="flex space-x-2 items-center">
       <input
         type="text"
