--- a/src/_includes/post.html
+++ b/src/_includes/post.html
@@ -63,3 +63,10 @@ layout: base.html
     });
   });
 </script>
+
+<link rel="stylesheet" href="/css/dracula.css" />
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
+
+<script>
+  hljs.initHighlightingOnLoad();
+</script>
