--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A collection of programming protips" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-P30MCY2S2W"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-P30MCY2S2W');
+    </script>
     <title>{{ title }}</title>
   </head>
   <body>
