--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -15,7 +15,6 @@
         dataLayer.push(arguments);
       }
       gtag('js', new Date());
-
       gtag('config', 'G-P30MCY2S2W');
     </script>
     <title>{{ title }}</title>
@@ -50,7 +49,7 @@
         <div class="flex space-x-2 items-end">
           <a href="https://github.com/magicmark/programming-protips-wiki"
             ><img
-              src="https://img.shields.io/github/stars/magicmark/programming-protips-wiki.svg?style=social&amp;label=Star"
+              src="https://img.shields.io/github/stars/magicmark/programming-protips-wiki.svg?style=social&label=Star"
               alt="github" /></a
           ><a
             href="https://twitter.com/intent/tweet?text=https%3A%2F%2Fprogramming.protips.wiki+-+A+collection+of+programming+protips%21"
