--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -47,14 +47,17 @@
         </a>
 
         <div class="flex space-x-2 items-end">
-          <a href="https://github.com/magicmark/programming-protips-wiki"
+          <a
+            href="https://github.com/magicmark/programming-protips-wiki"
+            target="_blank"
             ><img
               src="https://img.shields.io/github/stars/magicmark/programming-protips-wiki.svg?style=social&label=Star"
               alt="github" /></a
           ><a
             href="https://twitter.com/intent/tweet?text=https%3A%2F%2Fprogramming.protips.wiki+-+A+collection+of+programming+protips%21"
+            target="_blank"
             ><img
-              src="https://img.shields.io/twitter/url/http/shields.io.svg?style=social"
+              src="https://img.shields.io/badge/Tweet--lightgrey?logo=twitter&style=social"
               alt="twitter"
           /></a>
         </div>
