--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -9,14 +9,11 @@
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-P30MCY2S2W"
     ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-      gtag('config', 'G-P30MCY2S2W');
-    </script>
+    <script
+      data-goatcounter="https://programming-protips.goatcounter.com/count"
+      async
+      src="//gc.zgo.at/count.js"
+    ></script>
     <title>{{ title }}</title>
   </head>
   <body>
