--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -9,13 +9,8 @@
   </head>
   <body>
     <header class="text-gray-600 body-font border-b-2">
-      <div
-        class="max-w-screen-lg mx-auto flex justify-between p-6 flex-col md:flex-row"
-      >
-        <a
-          class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0"
-          href="/"
-        >
+      <div class="max-w-screen-lg mx-auto flex justify-between p-6 flex-col md:flex-row">
+        <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0" href="/">
           <svg
             class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full"
             fill="none"
@@ -35,18 +30,14 @@
         </a>
 
         <div class="flex space-x-2 items-end">
-          <a
-            href="https://github.com/magicmark/programming-protips-wiki"
-            target="_blank"
+          <a href="https://github.com/magicmark/programming-protips-wiki" target="_blank"
             ><img
               src="https://img.shields.io/github/stars/magicmark/programming-protips-wiki.svg?style=social&label=Star"
               alt="github" /></a
           ><a
             href="https://twitter.com/intent/tweet?text=https%3A%2F%2Fprogramming.protips.wiki+-+A+collection+of+programming+protips%21"
             target="_blank"
-            ><img
-              src="https://img.shields.io/badge/Tweet--lightgrey?logo=twitter&style=social"
-              alt="twitter"
+            ><img src="https://img.shields.io/badge/Tweet--lightgrey?logo=twitter&style=social" alt="twitter"
           /></a>
         </div>
       </div>
