--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -43,7 +43,7 @@
       </div>
     </header>
     <div class="max-w-screen-lg mx-auto p-6">
-      <main>{{ content | safe }}</main>
+      <main>{{ content }}</main>
     </div>
 
     <script
