--- a/src/_includes/post.html
+++ b/src/_includes/post.html
@@ -3,11 +3,12 @@ layout: base.html
 ---
 
 <div
-  class=" shadow mb-8 w-full bg-sky-100 font-mono bg-opacity-50 rounded text-sm outline-none text-gray-600 p-3 flex items-center justify-between">
+  class="shadow mb-8 w-full bg-sky-100 font-mono bg-opacity-50 rounded text-sm outline-none text-gray-600 p-3 flex items-center justify-between"
+>
   <div>
     <span>https://programming.protips.wiki</span><span class="text-gray-700 font-bold">/{{ page.fileSlug }}</span>
   </div>
-  <button id="copy-link" class="text-indigo-400 font-sans ">Copy link to this page</button>
+  <button id="copy-link" class="text-indigo-400 font-sans">Copy link to this page</button>
 </div>
 
 <div class="text-gray-600 flex space-x-2 font-light mb-2">
@@ -26,12 +27,14 @@ layout: base.html
     overflow-wrap: initial;
     overflow-x: scroll;
   }
-
 </style>
 
 <div class="border-t mt-8 pt-4">
-  <a class="text-purple-400 hover:underline"
-    href="https://github.com/magicmark/programming-protips-wiki/edit/master/src/protips/{{ page.fileSlug }}.md">Edit <span class="font-mono">{{page.fileSlug}}.md</span> on GitHub.</a>
+  <a
+    class="text-purple-400 hover:underline"
+    href="https://github.com/magicmark/programming-protips-wiki/edit/master/src/protips/{{ page.fileSlug }}.md"
+    >Edit <span class="font-mono">{{page.fileSlug}}.md</span> on GitHub.</a
+  >
 </div>
 
 <script>
