--- a/src/_includes/post.html
+++ b/src/_includes/post.html
@@ -2,32 +2,51 @@
 layout: base.html
 ---
 
-<div
-  class="shadow mb-8 w-full bg-sky-100 font-mono bg-opacity-50 rounded text-sm outline-none text-gray-600 p-3 flex items-center justify-between"
->
-  <div>
-    <span>https://programming.protips.wiki</span><span class="text-gray-700 font-bold">/{{ page.fileSlug }}</span>
+<div class="flex space-x-8">
+  <div class="w-full">
+    <div
+      class="overflow-x-auto shadow mb-8 bg-sky-100 font-mono bg-opacity-50 rounded text-sm outline-none text-gray-600 p-3 flex items-center justify-between space-x-3"
+    >
+      <div class="shrink whitespace-nowrap overflow-x-auto">
+        <span not-real-class="hidden md:inline">https://programming.protips.wiki</span
+        ><span class="text-gray-700 font-bold">/{{ page.fileSlug }}</span>
+      </div>
+      <button id="copy-link" class="text-indigo-400 font-sans whitespace-nowrap shrink-0">
+        Copy link to this page
+      </button>
+    </div>
+
+    <div class="text-gray-600 flex space-x-2 font-light mb-2">
+      {%- for tag in tags %}
+      <span class="text-base">#{{ tag }}</span>
+      {%- endfor %}
+    </div>
+
+    <article class="prose max-w-none mx-auto">
+      <h1 class="text-xl">{{title}}</h1>
+      {{ content }}
+    </article>
   </div>
-  <button id="copy-link" class="text-indigo-400 font-sans">Copy link to this page</button>
+
+  <div class="flex-shrink-0 w-64 md:block hidden">
+    <div class="">
+      <span class="font-light text-lg text-gray-500">More Tips</span>
+      <ul class="mt-2">
+        {%- for protip in collections.protips %}
+        <li class="mt-1 text-sm">
+          <span class="mr-1 font-mono text-xs">{{ protip.data.page.fileSlug }}:</span>
+          <a
+            href="{{ protip.data.page.url }}"
+            class="hover:underline transition ease-in-out text-blue-600 hover:text-blue-800 visited:text-purple-600"
+          >
+            {{ protip.data.title }}
+          </a>
+        </li>
+        {%- endfor %}
+      </ul>
+    </div>
+  </div>
 </div>
-
-<div class="text-gray-600 flex space-x-2 font-light mb-2">
-  {%- for tag in tags %}
-  <span class="text-base">#{{ tag }}</span>
-  {%- endfor %}
-</div>
-
-<article class="prose max-w-none break-words">
-  <h1 class="text-xl">{{title}}</h1>
-  {{ content }}
-</article>
-
-<style type="text/css">
-  code {
-    overflow-wrap: initial;
-    overflow-x: scroll;
-  }
-</style>
 
 <div class="border-t mt-8 pt-4">
   <a
