--- a/src/_includes/post.html
+++ b/src/_includes/post.html
@@ -8,7 +8,7 @@ layout: base.html
       class="overflow-x-auto shadow mb-8 bg-sky-100 font-mono bg-opacity-50 rounded text-sm outline-none text-gray-600 p-3 flex items-center justify-between space-x-3"
     >
       <div class="shrink whitespace-nowrap overflow-x-auto">
-        <span not-real-class="hidden md:inline">https://programming.protips.wiki</span
+        <span class="hidden md:inline">https://programming.protips.wiki</span
         ><span class="text-gray-700 font-bold">/{{ page.fileSlug }}</span>
       </div>
       <button id="copy-link" class="text-indigo-400 font-sans whitespace-nowrap shrink-0">
