--- a/src/index.njk
+++ b/src/index.njk
@@ -37,10 +37,10 @@ title: Programming Protips Wiki
         href="{{ protip.data.page.url }}"
         class="text-indigo-500 flex flex-col"
       >
-        <span class="mr-1 font-mono text-sm"
-          >/{{ protip.data.page.fileSlug }}/</span
+        <span class="font-mono text-sm"
+          >{{ protip.data.page.fileSlug }}</span
         >
-        <span class="ml-1 font-bold">{{ protip.data.title }}</span>
+        <span class="font-bold">{{ protip.data.title }}</span>
       </a>
     </li>
     {%- endfor %}
